--- a/config/keys/80percentkeys.cfg
+++ b/config/keys/80percentkeys.cfg
@@ -3,7 +3,7 @@ fin_echo "[60percentrow7.cfg] Start of 60percentrow7.cfg";
 
 
 fin_echo "[60percentrow7.cfg] ";
-fin_echo "[60percentrow7.cfg] No key for prtsc";
+bind "PRINTSCREEN";
 bind "SCROLLLOCK";
 bind "NUMLOCK";
 bind "INS";
