--- a/config/keys/joystickbinds.cfg
+++ b/config/keys/joystickbinds.cfg
@@ -3,24 +3,46 @@ fin_echo "[joystickbinds.cfg] Start of joystickbinds.cfg";
 
 
 fin_echo "[joystickbinds.cfg] ";
-bind "A_BUTTON";
-bind "B_BUTTON";
-bind "X_BUTTON";
-bind "Y_BUTTON";
-bind "L_SHOULDER";
-bind "R_SHOULDER";
-bind "L_TRIGGER";
-bind "R_TRIGGER";
-bind "BACK";
-bind "START";
-bind "STICK1";
-bind "STICK2";
-bind "S1_UP";
-bind "S2_UP";
-bind "UP";
-bind "DOWN";
-bind "LEFT";
-bind "RIGHT";
+bind "JOY1";
+bind "JOY2";
+bind "JOY3";
+bind "JOY4";
+bind "JOY5";
+bind "JOY6";
+bind "JOY7";
+bind "JOY8";
+bind "JOY9";
+bind "JOY10";
+bind "JOY11";
+bind "JOY12";
+bind "JOY13";
+bind "JOY14";
+bind "JOY15";
+bind "JOY16";
+bind "JOY17";
+bind "JOY18";
+bind "JOY19";
+bind "JOY20";
+bind "JOY21";
+bind "JOY22";
+bind "JOY23";
+bind "JOY24";
+bind "JOY25";
+bind "JOY26";
+bind "JOY27";
+bind "JOY28";
+bind "JOY29";
+bind "JOY30";
+bind "JOY31";
+bind "JOY32";
+bind "Z_AXIS_POS";
+bind "Z_AXIS_NEG";
+bind "Y_AXIS_NEG";
+bind "U_AXIS_NEG";
+bind "POV_UP";
+bind "POV_DOWN";
+bind "POV_LEFT";
+bind "POV_RIGHT";
 fin_echo "[joystickbinds.cfg] ";
 
 
