--- a/config/keys/mousekeybinds.cfg
+++ b/config/keys/mousekeybinds.cfg
@@ -10,6 +10,8 @@ bind "MOUSE4";
 bind "MOUSE5";
 bind "MWHEELUP";
 bind "MWHEELDOWN";
+bind "MOUSE_X";
+bind "MOUSE_Y";
 fin_echo "[mousekeybinds.cfg] ";
 
 
