--- a/config/primary/audio.cfg
+++ b/config/primary/audio.cfg
@@ -34,14 +34,16 @@ snd_mvp_volume "0.03";                                          // Changes the m
 
 
 fin_echo "[audio.cfg] {2} Changing miscellaneous sound settings";
+cl_borrow_music_from_player_slot "-1";
 sv_ignoregrenaderadio "true";                                   // Turn off Fire in the hole messages
 snd_headphone_eq "1";                                           // Select Headphone EQ Preset (0: Natural, 1: Crisp, 2: Smooth)
-snd_steamaudio_enable_perspective_correction "true";            // Enable perspective correction for 3D audio.
 snd_spatialize_lerp "0";                                        // "L/R Isolation" in-game audio setting
 snd_mute_losefocus "false";                                     // Mute sounds when losing focus
 snd_mixahead "0.0032766439253464310";                           // Lower = less audio audio delay, too low = compressed sounding buggy audio (THIS VARIES SYSTEM TO SYSTEM)
+snd_steamaudio_enable_perspective_correction "true";            // Enable perspective correction for 3D audio.
 snd_mute_mvp_music_live_players "true";                         // If set, MVP music is muted if players from both teams are still alive.
 voice_always_sample_mic "true";                                 // For systems experiencing a hang/stall when using voice chat.
+voice_test_log_send "true";
 voice_threshold "0";
 bot_chatter "off";                                              // Control how bots talk. Allowed values: 'off', 'radio', 'minimal', or 'normal'.
 // snd_mix_async "true";                                        // [developmentonly] 0: Synchronous sound mixing (for CPUs with very few threads) 1: Asynchronous sound mixing (for CPUs with many threads)
