--- a/config/primary/binds.cfg
+++ b/config/primary/binds.cfg
@@ -23,7 +23,7 @@ bind "F10"            "cs_quit_prompt;                                          
 bind "F11"            "                                                                     ; fin_keycontainer";                    // This is the F11 key
 bind "F12"            "jpeg multishot 100; screenshot; devshots_screenshot;                 ; fin_keycontainer";                    // This is the F12 key
 bind "PRINTSCREEN"    "                                                                     ; fin_keycontainer";                    // This is the print screen key
-bind "SCROLLLOCK"     "exec ./practice.cfg; exec ./config/utility/skinpictures.cfg;            ; fin_keycontainer";                    // This is the ScrLk key
+bind "SCROLLLOCK"     "exec ./practice.cfg; exec ./config/utility/skinpictures.cfg;         ; fin_keycontainer";                    // This is the ScrLk key
 bind "NUMLOCK"        "                                                                     ; fin_keycontainer";                    // This is the pause key (why valve)
 
 
@@ -47,13 +47,13 @@ bind "HOME"           "fin_toggleinspect;                                       
 bind "PGUP"           "incrementvar viewmodel_fov 54 68 1;                                  ; fin_keycontainer";                    // This is the page up key
 bind "NUMLOCKTOGGLE"  "                                                                     ; fin_keycontainer";                    // This is the Num lock key
 bind "KP_DIVIDE"      "                                                                     ; fin_keycontainer";                    // This is the Numpad / key
-bind "KP_MULTIPLY"    "exec ./config/utility/clear.cfg; exec ./practice.cfg;                   ; fin_keycontainer";                    // This is the Numpad * key
+bind "KP_MULTIPLY"    "exec ./config/utility/clear.cfg; exec ./practice.cfg;                ; fin_keycontainer";                    // This is the Numpad * key
 bind "KP_MINUS"       "condump; exec ./autoexec.cfg; fin_blockscreen_off;                   ; fin_keycontainer";                    // This is the Numpad - key
 
 
 fin_echo "[binds.cfg] {4} Configuring binds for keyboard row 3";
 bind "TAB"            "+fin_scorenet; +showscores;                                          ; fin_keycontainer";                    // This is the tab key
-bind "Q"              "cyclevar fps_max 0 32;                                               ; fin_keycontainer";                    // This is the q key
+bind "Q"              "fin_lagswitch_fps;                                                   ; fin_keycontainer";                    // This is the q key
 bind "W"              "fin_nadexhon; slot10;                                                ; fin_keycontainer";                    // This is the w key
 bind "E"              "+fin_ncmforward;                                                     ; fin_keycontainer";                    // This is the e key
 bind "R"              "+fin_betteruse;                                                      ; fin_keycontainer";                    // This is the r key
@@ -145,46 +145,46 @@ bind "MOUSE_Y"        "fin_onmousemove; pitch";                                 
 
 
 fin_echo "[binds.cfg] {9} Configuring binds for controllers";
-bind "JOY1"       "+fin_cjump;                                                          ; fin_keycontainer";                    // This is the A button on Xbox Controllers
-bind "JOY2"       "+fin_betteruse;                                                      ; fin_keycontainer";                    // This is the B button on Xbox Controllers
-bind "JOY3"       "+fin_desubtick_reload; fin_clear_lookatweapon;                       ; fin_keycontainer";                    // This is the X button on Xbox Controllers
-bind "JOY4"       "invnextnongrenade;                                                   ; fin_keycontainer";                    // This is the Y button on Xbox Controllers
-bind "JOY5"       "+fin_desubtick_lookspin;                                             ; fin_keycontainer";                    // This is left shoulder (bumper) on Xbox Controllers
-bind "JOY6"       "+fin_desubtick_duck;                                                 ; fin_keycontainer";                    // This is right shoulder (bumper) on Xbox Controllers
-bind "JOY7"       "scoreneton;                                                          ; fin_keycontainer";                    // This is the back (menu) button on Xbox Controllers
-bind "JOY8"       "gameui_activate;                                                     ; fin_keycontainer";                    // This is the pause (start) button on Xbox Controllers
-bind "JOY9"	      "+fin_desubtick_voicerecord;                                          ; fin_keycontainer";                    // This is the left joystick click on Xbox Controllers
-bind "JOY10"	    "+fin_desubtick_attack2;                                              ; fin_keycontainer";                    // This is the right joystick click on Xbox Controllers
-bind "JOY11"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY12"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY13"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY14"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY15"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY16"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY17"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY18"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY19"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY20"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY21"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY22"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY23"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY24"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY25"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY26"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY27"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY28"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY29"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY30"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY31"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "JOY32"      "                                                                     ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
-bind "Z_AXIS_POS" "+fin_loudshift;                                                      ; fin_keycontainer";                    // This is the left trigger on Xbox Controllers
-bind "Z_AXIS_NEG" "+fin_desubtick_attack;                                               ; fin_keycontainer";                    // This is the right trigger on Xbox Controllers
-bind "Y_AXIS_NEG"	"xmove;                                                               ; fin_keycontainer";                    // TODO: Figure out what this key maps to physically
-bind "U_AXIS_NEG"	"xlook;                                                               ; fin_keycontainer";                    // TODO: Figure out what this key maps to physically
-bind "POV_UP"	    "mute;                                                                ; fin_keycontainer";                    // This is up    on the D-Pad on Xbox Controllers
-bind "POV_DOWN"	  "drop;                                                                ; fin_keycontainer";                    // This is down  on the D-Pad on Xbox Controllers
-bind "POV_LEFT"	  "invnext;                                                             ; fin_keycontainer";                    // This is left  on the D-Pad on Xbox Controllers
-bind "POV_RIGHT"	"invprev;                                                             ; fin_keycontainer";                    // This is right on the D-Pad on Xbox Controllers
+bind "JOY1"       "+fin_cjump;                                                              ; fin_keycontainer";                    // This is the A button on Xbox Controllers
+bind "JOY2"       "+fin_betteruse;                                                          ; fin_keycontainer";                    // This is the B button on Xbox Controllers
+bind "JOY3"       "+fin_desubtick_reload; fin_clear_lookatweapon;                           ; fin_keycontainer";                    // This is the X button on Xbox Controllers
+bind "JOY4"       "invnextnongrenade;                                                       ; fin_keycontainer";                    // This is the Y button on Xbox Controllers
+bind "JOY5"       "+fin_desubtick_lookspin;                                                 ; fin_keycontainer";                    // This is left shoulder (bumper) on Xbox Controllers
+bind "JOY6"       "+fin_desubtick_duck;                                                     ; fin_keycontainer";                    // This is right shoulder (bumper) on Xbox Controllers
+bind "JOY7"       "scoreneton;                                                              ; fin_keycontainer";                    // This is the back (menu) button on Xbox Controllers
+bind "JOY8"       "gameui_activate;                                                         ; fin_keycontainer";                    // This is the pause (start) button on Xbox Controllers
+bind "JOY9"	      "+fin_desubtick_voicerecord;                                              ; fin_keycontainer";                    // This is the left joystick click on Xbox Controllers
+bind "JOY10"	    "+fin_desubtick_attack2;                                                  ; fin_keycontainer";                    // This is the right joystick click on Xbox Controllers
+bind "JOY11"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY12"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY13"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY14"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY15"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY16"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY17"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY18"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY19"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY20"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY21"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY22"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY23"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY24"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY25"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY26"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY27"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY28"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY29"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY30"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY31"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "JOY32"      "                                                                         ; fin_keycontainer";                    // Unknown, present but not bound to anything by default
+bind "Z_AXIS_POS" "+fin_loudshift;                                                          ; fin_keycontainer";                    // This is the left trigger on Xbox Controllers
+bind "Z_AXIS_NEG" "+fin_desubtick_attack;                                                   ; fin_keycontainer";                    // This is the right trigger on Xbox Controllers
+bind "Y_AXIS_NEG"	"xmove;                                                                   ; fin_keycontainer";                    // TODO: Figure out what this key maps to physically
+bind "U_AXIS_NEG"	"xlook;                                                                   ; fin_keycontainer";                    // TODO: Figure out what this key maps to physically
+bind "POV_UP"	    "mute;                                                                    ; fin_keycontainer";                    // This is up    on the D-Pad on Xbox Controllers
+bind "POV_DOWN"	  "drop;                                                                    ; fin_keycontainer";                    // This is down  on the D-Pad on Xbox Controllers
+bind "POV_LEFT"	  "invnext;                                                                 ; fin_keycontainer";                    // This is left  on the D-Pad on Xbox Controllers
+bind "POV_RIGHT"	"invprev;                                                                 ; fin_keycontainer";                    // This is right on the D-Pad on Xbox Controllers
 // Make sure to remove unbindalljoystick from misc.cfg if you want to use a controller.
 
 
