--- a/config/primary/debug.cfg
+++ b/config/primary/debug.cfg
@@ -4,6 +4,8 @@ fin_echo "[debug.cfg] Start of debug.cfg";
 
 fin_echo "[debug.cfg] {1} Printing debug information and saving console log";
 fin_echo "[debug.cfg]  ";
+fin_def_fetch;                                                  // Custom alias to fetch value of numerical/boolean defensive convars
+fin_echo "[debug.cfg]  ";
 sys_info;                                                       // Print system information to the console
 fin_echo "[debug.cfg]  ";
 demo_info;                                                      // Print version info string.
