--- a/config/primary/misc.cfg
+++ b/config/primary/misc.cfg
@@ -39,6 +39,7 @@ cl_color "1";                                                   // Player color 
 bot_quota "0";                                                  // Determines the total number of bots in the game.
 func_break_max_pieces "0";                                      // Limits the max amount of "pieces" that come off of broken objects (ex. extra particles that come off of nuke/mirage/cache vents)
 spec_replay_autostart "false";                                  // Auto-start Killer Replay when available
+sv_matchend_drops_enabled "true";                               // Rewards gameplay time is always accumulated for players, but drops at the end of the match can be prevented
 sv_competitive_minspec "true";                                  // Enable to force certain client convars to minimum/maximum values to help prevent competitive advantages.
 sv_holiday_mode "0";                                            // 0 = OFF, 1 = Halloween, 2 = Winter
 
