--- a/config/primary/ui.cfg
+++ b/config/primary/ui.cfg
@@ -66,6 +66,7 @@ ui_party_msg_sound_enabled "false";                             // When enabled,
 ui_steam_overlay_notification_position_vert "0";                // Steam overlay notification position vertical offset
 ui_steam_overlay_notification_position_horz "80";               // Steam overlay notification position horizontal offset
 ui_steam_overlay_notification_position "topright";              // Steam overlay notification position
+sv_show_teammate_death_notification "true";                     // Show chat notification upon teammate death
 
 
 fin_echo "[ui.cfg] {3} Final HUD Adjustments";
