--- a/config/loader.cfg
+++ b/config/loader.cfg
@@ -5,10 +5,10 @@ fin_echo "[loader.cfg] Start of loader.cfg";
 exec "./config/utility/clear.cfg";
 
 fin_echo "[loader.cfg] Loading";                                               // Echo the command arguments on the console
-fin_echo "[loader.cfg] Fin's CS2 Config 5.0.0-beta9";
+fin_echo "[loader.cfg] Fin's CS2 Config 5.0.0-rc1";
 fin_echo "[loader.cfg] https://steamcommunity.com/id/bigfinfrank";
 fin_echo "[loader.cfg] https://github.com/bigfinfrank/cfg";
-fin_echo "[loader.cfg] Last edited: November 2nd 2023";
+fin_echo "[loader.cfg] Last edited: November 3rd 2023";
 fin_echo "[loader.cfg]  ";
 fin_echo "[loader.cfg]  ";
 fin_echo "[loader.cfg]  ";
@@ -123,10 +123,10 @@ fin_echo "[loader.cfg]  ";
 fin_echo "[loader.cfg]  ";
 fin_echo "[loader.cfg]  ";
 fin_echo "[loader.cfg] Loaded";
-fin_echo "[loader.cfg] Fin's CS2 Config 5.0.0-beta9";
+fin_echo "[loader.cfg] Fin's CS2 Config 5.0.0-rc1";
 fin_echo "[loader.cfg] https://steamcommunity.com/id/bigfinfrank";
 fin_echo "[loader.cfg] https://github.com/bigfinfrank/cfg";
-fin_echo "[loader.cfg] Last edited: November 2nd 2023";
+fin_echo "[loader.cfg] Last edited: November 3rd 2023";
 fin_echo "[loader.cfg]  ";
 fin_echo "[loader.cfg]  ";
 fin_echo "[loader.cfg]  ";
