--- a/config/aliases/aliases_controls.cfg
+++ b/config/aliases/aliases_controls.cfg
@@ -74,8 +74,8 @@ alias "fin_antiafk2" "-fin_desubtick_left; -fin_desubtick_moveright; -fin_desubt
 
 
 fin_echo "[aliases_controls.cfg] {9} Registering long jump aliases";
-alias "+fin_longjump" "+fin_desubtick_duck; +fin_desubtick_jump; fin_forward_released";
-alias "-fin_longjump" "-fin_desubtick_duck; -fin_desubtick_jump; ";
+alias "+fin_longjump" "+fin_desubtick_duck; +fin_desubtick_jump";
+alias "-fin_longjump" "-fin_desubtick_duck; -fin_desubtick_jump";
 
 
 fin_echo "[aliases_controls.cfg] {10} Registering null-cancelling movement aliases";
